fix: Solved issue with overflow in main tag.

--- a/app/javascript/stylesheets/shared/_base.scss
+++ b/app/javascript/stylesheets/shared/_base.scss
@@ -11,6 +11,13 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+main {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 p, a, span {
   font-size: $fs-sm;
 }
